Align inputs and labels, fix drop shadow

--- a/style.css
+++ b/style.css
@@ -39,13 +39,17 @@ body {
 
 .toptext {
     flex: 5;
-    background-color: #eeeeff;
+    background-color: white;
 }
 
 .mainform {
     flex: 4;
+    background-color: white;
 }
 
+.mainform > div:nth-child(1) {
+    margin-left: 55px;
+}
 
 /*
     FORM ROWS
@@ -56,15 +60,6 @@ body {
 .row3 {
     display: flex;
     height: 30%;
-}
-
-.wrap_label {
-    background-color: aqua;
-    flex: 1 0 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .nfname,
@@ -83,18 +78,22 @@ body {
 label {
     flex: 1;
     display: block;
+    margin-left: 54px;
+    margin-top: 16px;
 }
 
 input {
-    flex: 1;
+    flex: none;
     display: block;
     align-self: center;
-    border-radius: 8px;
+    border-radius: 6px;
     width: 70%;
+    height: 27%;
+    margin-bottom: 18px;
     border: 1px solid #bbbbbb;
 }
 
 .confirm {
     flex: 5;
-    background-color: #eeeeff;
+    box-shadow: inset 0px 5px 5px #efefef;
 }
